--- a/less/custom.less
+++ b/less/custom.less
@@ -322,7 +322,7 @@ hr{
     /*Final position*/
     background-position: 0px 0;
 }
-body{width:768px;height:1024px;}
+body{width:768px;height:1024px;margin:0 auto;}
 // when hover an element will fade out all the other part and keep the current one 
 // .gloomy:after{
 
