--- a/css/main.css
+++ b/css/main.css
@@ -250,5 +250,20 @@ textarea[contenteditable] {
 
 body{display:none;}
 
+.highlight{
+    background:tomato;
+    box-shadow: 0 4px 2px -1px rgba(0, 0, 0, 0.2);
+    padding: 5px;
+    /* text-transform: uppercase; */
+    text-shadow: 0 2px 0px rgba(0, 0, 0, 0.2);
+    color:white;
+    /* for overlay style */
+    /* position:relative;
+    top:0;
+    left:0;
+    z-index:100; */
 
+    border-radius:3px;
+
+}
 
