--- a/less/custom.less
+++ b/less/custom.less
@@ -155,7 +155,7 @@ header{
 	.button-group{
 		.button{
 			box-shadow:0 1px 2px -1px rgba(255,255,255,.6);
-			padding:7px 15px!important;
+			padding:7px 15px;
 
 		}
 	}
@@ -168,6 +168,8 @@ header{
 				color:silver;
 				text-shadow:0 1px rgba(0,0,0,.8);
 				box-shadow:2px 2px 3px rgba(0,0,0,.8) inset;
+				position:relative;
+				z-index:100;
 				
 				padding-left:20%;
 				&:focus ~ i{
@@ -194,6 +196,7 @@ header{
 			pointer-events:none;
 			cursor:pointer;
 			height: 28px;
+			z-index:100;
 		}
 	}
 }
@@ -250,7 +253,7 @@ footer{
 // check the grid
 // [class^="col_"]{border:1px solid silver;}
 // check the size
-.size{position:fixed;top:350px;left:0;background:rgba(0,0,0,.8);padding:10px;color:white;border-radius:0 3px 3px 0;}
+.size{position:fixed;top:350px;left:0;background:rgba(0,0,0,.8);padding:10px;color:white;border-radius:0 3px 3px 0;z-index:1;}
 .hr{
 	border : 0;
    	height : 15px;
@@ -322,7 +325,7 @@ hr{
     /*Final position*/
     background-position: 0px 0;
 }
-body{width:768px;height:1024px;margin:0 auto;}
+
 // when hover an element will fade out all the other part and keep the current one 
 // .gloomy:after{
 
