--- a/less/custom.less
+++ b/less/custom.less
@@ -257,7 +257,7 @@ footer{
 .hr{
 	border : 0;
    	height : 15px;
-   	background : url(/img/horizontal-devided-line.png) 50% -20px no-repeat;
+   	background : url(../img/horizontal-devided-line.png) 50% -20px no-repeat;
    	margin : 1em 0;
 }
 hr{
@@ -308,7 +308,7 @@ hr{
 .hover_shine{
     width:100%; 
     height: 100%; 
-    background-image: url(/img/shine.png);
+    background-image: url(../img/shine.png);
     position: absolute;
     /*initial position*/
     background-position: -300px 0; 
