--- a/less/custom.less
+++ b/less/custom.less
@@ -253,7 +253,13 @@ footer{
 // check the grid
 // [class^="col_"]{border:1px solid silver;}
 // check the size
-.size{position:fixed;top:350px;left:0;background:rgba(0,0,0,.8);padding:10px;color:white;border-radius:0 3px 3px 0;z-index:1;}
+.size{position:fixed;top:25%;left:0;background:rgba(0,0,0,.8);padding:10px;color:white;border-radius:0 3px 3px 0;z-index:100;}
+.bookmarklet{
+    position:fixed;
+    top:25%;
+    right:0;
+    z-index:100;
+}
 .hr{
 	border : 0;
    	height : 15px;
