--- a/css/modal.css
+++ b/css/modal.css
@@ -98,13 +98,13 @@ body {
     color: #222;
 }
  
-/* .avgrund-active body {
-  -webkit-transform: scale( 0.9 );
-     -moz-transform: scale( 0.9 );
-      -ms-transform: scale( 0.9 );
-       -o-transform: scale( 0.9 );
-          transform: scale( 0.9 );
-} */
+.avgrund-active body {
+  -webkit-transform: scale( 1 );
+     -moz-transform: scale( 1 );
+      -ms-transform: scale( 1 );
+       -o-transform: scale( 1 );
+          transform: scale( 1 );
+} 
 
 .avgrund-cover {
   position: absolute;
@@ -145,7 +145,7 @@ body {
 
   visibility: hidden;
   opacity: 0;
-  z-index: 2;
+  z-index: 101;
 
   border-radius:4px;
   margin:0 auto;
@@ -158,7 +158,7 @@ body {
       -ms-transform: scale( 0.8 );
        -o-transform: scale( 0.8 );
           transform: scale( 0.8 );
-  z-index:100;
+
 } 
   .avgrund-active .avgrund-popup-animate {
     visibility: visible;
@@ -300,3 +300,5 @@ body {
 }
 
 .hasModal{cursor:pointer;}
+
+
