--- a/less/custom.less
+++ b/less/custom.less
@@ -94,29 +94,6 @@ input.mac {
 }
  
 
-/* slider container */
-.iosSlider {
-	/* required */
-	position: relative;
-	top: 0;
-	left: 0;
-	overflow: hidden;
-	
-	width: 100%;
-	height: 220px;
-	.slider{
-		/* required */
-		width:100%;
-		height: auto;
-		.slide {
-			/* required */
-			float: left;
-
-			width: 100%;
-			height: auto;
-		}
-	}
-}
 
 .icon-search{
 	position:absolute;
@@ -124,10 +101,6 @@ input.mac {
 	left:0;
 }
 
-
- 
-
- 
 
 
 body{
@@ -147,22 +120,10 @@ body{
 }
 
 header{
-	background-image:url(../img/blue-leather-label.png);
-	height:40px;
-	nav{
-		margin:0 auto;
-	}
-	.button-group{
-		.button{
-			box-shadow:0 1px 2px -1px rgba(255,255,255,.6);
-			padding:7px 15px;
-
-		}
-	}
 	.search-container{
 		position:relative;
 			input.mac{
-				margin:5px 0;
+				margin:5px;
 				background-color:#111;
 				border-radius:10px;
 				color:silver;
@@ -209,11 +170,10 @@ header{
 		color:rgba(0,0,0,.6);
 		text-shadow:0 1px white;
 		font-size:14px;
-		padding:15px 0;
+		padding:5px 0;
 		height: 15px;
 		text-transform:capitalize;
 		text-align:left;
-		text-indent:10px;
 		font-weight:bold;
 	}
 	.picture{
