--- a/css/34gs-queries.css
+++ b/css/34gs-queries.css
@@ -57,11 +57,17 @@
 	.button.large{padding:12px;}
 	header .col_2{width:58%;}
 
-	header .button{padding:7px 25px;}
+	header .button{padding:7px 15px!important;}
 	header .button-group{padding:4px;}
 
 	.size:after{content:' and landscape';}
 	.button.large{width:320px!important;}
+	.iosSlider.rows .slider .slide {
+	    /* width: 14.2857143%; */
+	    /* display 7 icons 100/7= 14.2857143 */
+	    width:12.5%;
+	    /* display 8 icons 100/8=12.5 */
+	}
 }
 
 /* 
