--- a/less/custom.less
+++ b/less/custom.less
@@ -113,7 +113,7 @@ body{
 
 .height-wrapper{
 	.background-gradient1(#fff, #ccc, #fff, 0, .75, 1);
-	height:auto !important;
+
 	height:100%;
 	min-height:100%;
 	margin:0 auto -40px;
@@ -128,7 +128,7 @@ header{
 				border-radius:10px;
 				color:silver;
 				text-shadow:0 1px rgba(0,0,0,.8);
-				box-shadow:2px 2px 3px rgba(0,0,0,.8) inset;
+				box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8) inset, 0 1px rgba(255,255,255,.35);
 				position:relative;
 				z-index:100;
 				
@@ -233,7 +233,7 @@ hr{
     background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.65), rgba(0,0,0,0)); 
     background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.65), rgba(0,0,0,0)); 
     background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.65), rgba(0,0,0,0));
-    margin:10px 0;
+    margin:20px 0;
     &:after{
 
     }
