--- a/css/main.css
+++ b/css/main.css
@@ -277,9 +277,31 @@ header .button-group .button{
     box-shadow:0 1px 2px -1px rgba(255,255,255,.6);
     padding:7px 15px;
 }
+header .col_2{width:58%;}
+
+
+.iosSliderTop{
+    clear: both;
+    width: 100%;
+    padding: 0 0 25%;
+    margin: 0 0 0 0;
+    position: relative;
+}
+.fluidHeight {
+    position: absolute;
+    width: 100%;
+    /* height: 87%; */
+    height: 100%;
+}
 
 /* slider container */
-.iosSlider.banner {
+.sliderContainer.banner{
+    height: 100%;
+    max-height: 100%;
+    padding: 0 0;
+}
+/* banner style start */
+.banner .iosSlider {
     /* required */
     position: relative;
     top: 0;
@@ -287,29 +309,26 @@ header .button-group .button{
     overflow: hidden;
     
     width:100%;
-    height: 250px;
-    margin:10px auto;
-
+    height: 100%;
 }
 
 /* slider */
-.iosSlider.banner .slider {
+.banner  .iosSlider .slider {
     /* required */
     width: 100%;
     height: 100%;
-
 }
 
 /* slide */
-.iosSlider.banner .slider .slide {
+.banner .iosSlider .slider .slide {
     /* required */
     float: left;
     
     width: 100%;
-    height: 250px;
+    height: 100%;
 }
 
-.iosSlider.banner .slider .slide .inner{
+.banner .iosSlider .slider .slide .inner{
     width:95%;
     height:100%;
     margin:0 auto;
@@ -317,31 +336,6 @@ header .button-group .button{
 .iosSlider .slider .slide .inner img{
     margin: 0 auto;
     display: block; 
-}
-
-.iosSlider.banner .slider .inner .text1{
-    background: none repeat scroll 0 0 #000000;
-    opacity: 0;
-    filter: alpha(opacity=0);
-    position: absolute;
-    right: 150px;
-    top: 30px;
-    padding: 0 2px 0 7px;
-    height: 70px;
-    color:white;
-    font-size: 420%;
-    line-height: 73px;
-    padding: 0 8px;
-}
-.iosSlider.banner .slider .inner .text2 {
-background: none repeat scroll 0 0 #000000;
-opacity: 0;
-filter: alpha(opacity=0);
-padding: 5px 7px 7px;
-position: absolute;
-right: 0;
-top: 100px;
-color:white;
 }
 /* end banner iosslider */
 
@@ -377,7 +371,7 @@ color:white;
     height: 140px;
 }
 .iosSlider.rows .slider .slide .inner{
-    width:100px;
+    max-width:100px;
     height:100%;
     margin:0 auto;
 }
@@ -420,3 +414,4 @@ color:white;
 
 
 footer ul li{text-transform:capitalize;}
+.content{width:95%;}
