--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,32 @@ header .button-group .button{
 }
 header .col_2{width:58%;}
 
+.sliderContainer .slideSelectors {
+    position: relative;
+    bottom: 35px;
+    left: 0;
+    width: 92%;
+    margin: 0 35px;
+    z-index: 1;
+    height: 10px;
+}
+
+.sliderContainer .slideSelectors .item {
+    float: left;
+    width: 9px;
+    height: 9px;
+    border: 1px solid rgba(0,0,0,.8);
+    background: #999;
+    margin: 0 0 0 10px;
+    opacity: 0.25;
+    filter: alpha(opacity=25);
+}
+
+.sliderContainer .slideSelectors .selected {
+    background: #00265C;
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
 
 .iosSliderTop{
     clear: both;
