--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,7 @@ header .button-group .button{
 }
 header .col_2{width:58%;}
 
-
+.topButtons{margin:20px auto;}
 
 
 .sliderContainer .slideSelectors {
@@ -294,7 +294,7 @@ header .col_2{width:58%;}
 
 .sliderContainer .slideSelectors .item {
     float: left;
-    width: 9px;
+    width: 20px;
     height: 9px;
     border: 1px solid rgba(0,0,0,.8);
     background: #999;
@@ -367,23 +367,45 @@ header .col_2{width:58%;}
 
 }
 .iosSlider .slider .slide.left .inner img{
--webkit-transform:perspective(800px) scale(1.05) rotateY(-10deg);
--webkit-transform-origin:100% 50%;
+    -webkit-transform:perspective(800px) scale(1.05) rotateY(-10deg);
+    -webkit-transform-origin:100% 50%;
+    -moz-transform:perspective(800px) scale(1.05) rotateY(-10deg);
+    -moz-transform-origin:100% 50%;
+    -ms-transform:perspective(800px) scale(1.05) rotateY(-10deg);
+    -ms-transform-origin:100% 50%;
+    -o-transform:perspective(800px) scale(1.05) rotateY(-10deg);
+    -o-transform-origin:100% 50%;
+    transform:perspective(800px) scale(1.05) rotateY(-10deg);
+    transform-origin:100% 50%;
+
+    -webkit-box-shadow:-10px 10px 8px -5px rgba(0,0,0,.5);
+    box-shadow:-10px 10px 8px -5px rgba(0,0,0,.5);
     
 }
 .iosSlider .slider .slide.right .inner img{
--webkit-transform:perspective(800px) scale(1.05) rotateY(10deg);
--webkit-transform-origin:0% 50%;
+    -webkit-transform:perspective(800px) scale(1.05) rotateY(10deg);
+    -webkit-transform-origin:0% 50%;
+    -moz-transform:perspective(800px) scale(1.05) rotateY(10deg);
+    -moz-transform-origin:0% 50%;
+    -ms-transform:perspective(800px) scale(1.05) rotateY(10deg);
+    -ms-transform-origin:0% 50%;
+    -o-transform:perspective(800px) scale(1.05) rotateY(10deg);
+    -o-transform-origin:0% 50%;
+    transform:perspective(800px) scale(1.05) rotateY(10deg);
+    transform-origin:0% 50%;
+
+    -webkit-box-shadow:10px 10px 8px -5px rgba(0,0,0,.5);
+    box-shadow:10px 10px 8px -5px rgba(0,0,0,.5);
     
 }
 
 
 .transition img{    
-    -webkit-transition:all 2s ease;
-    -moz-transition:all 2s ease;
-    -ms-transition:all 2s ease;
-    -o-transition:all 2s ease;
-    transition:all 2s ease; 
+    -webkit-transition:all 1s ease;
+    -moz-transition:all 1s ease;
+    -ms-transition:all 1s ease;
+    -o-transition:all 1s ease;
+    transition:all 1s ease; 
 }
 
 .banner .inner img{
@@ -399,18 +421,22 @@ header .col_2{width:58%;}
     -o-transform:perspective(800px) scale(.8);
     -o-transform-origin:50% 50%;
     transform:perspective(800px) scale(.8);
-    transform-origin:50% 50%; 
+    transform-origin:50% 50%;
+
+
     
 }
 
-.banner .slide.current .inner img{
+.banner .slide.current  img{
 
     -webkit-transform: scale(1.05) rotateY(0deg);
     -moz-transform: scale(1.05) rotateY(0deg);
     -ms-transform: scale(1.05) rotateY(0deg);
     -o-transform: scale(1.05) rotateY(0deg);
     transform: scale(1.05) rotateY(0deg);
-
+    -webkit-appearance: none;
+    -webkit-box-shadow:0 16px 8px -10px rgba(0,0,0,.8);
+    box-shadow:0 16px 8px -10px rgba(0,0,0,.8);
 }
 
 /* end banner iosslider */
@@ -425,8 +451,8 @@ header .col_2{width:58%;}
     overflow: hidden;
     
     width:100%;
-    height: 140px;
-    margin:10px auto;
+    height: 150px;
+    margin:20px auto;
 
 }
 
@@ -443,8 +469,10 @@ header .col_2{width:58%;}
     /* required */
     float: left;
     
-    width: 16.6665%;
-    height: 140px;
+    /* width: 16.6665%; */
+    width:18.181818%;
+    /* display 5.5 slide */
+    height: 100%;
 }
 .iosSlider.rows .slider .slide .inner{
     max-width:100px;
@@ -484,8 +512,13 @@ header .col_2{width:58%;}
     /* required */
     float: left;
     
-    width: 33.333%;
+    width: 40%;
+    /* display 2.5 slide (100/2.5 = 40)*/
     height: 106px;
+}
+.iosSlider.last-row .slider .slide img{
+    margin:0 auto;
+    display: block;
 }
 
 
