--- a/less/custom.less
+++ b/less/custom.less
@@ -174,7 +174,7 @@ header{
 		padding:20px 0;
 		height: 15px;
 		text-transform:capitalize;
-		text-align:left;
+		text-align:center;
 		font-weight:bold;
 	}
 	.picture{
