--- a/css/main.css
+++ b/css/main.css
@@ -284,7 +284,7 @@ header .col_2{width:58%;}
 
 .sliderContainer .slideSelectors {
     position: relative;
-    bottom: 35px;
+    bottom: 40px;
     left: 0;
     width: 92%;
     margin: 0 35px;
@@ -494,7 +494,7 @@ header .col_2{width:58%;}
     overflow: hidden;
     
     width:100%;
-    height: 106px;
+    height: 146px;
     margin:10px auto;
 
 }
@@ -514,11 +514,18 @@ header .col_2{width:58%;}
     
     width: 40%;
     /* display 2.5 slide (100/2.5 = 40)*/
-    height: 106px;
+    height: 100%;
 }
 .iosSlider.last-row .slider .slide img{
     margin:0 auto;
     display: block;
+    -webkit-box-shadow: 0 18px 5px -12px rgba(0,0,0,.5);
+    -moz-box-shadow: 0 18px 5px -12px rgba(0,0,0,.5);
+    box-shadow: 0 18px 5px -12px rgba(0,0,0,.5);
+    border: 1px solid silver;
+    border-radius: 5px;
+    
+
 }
 
 
