--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body {
     line-height: 1.4;
 }
 
+
 a {
     color: #00e;
 }
@@ -386,10 +387,10 @@ header .col_2{width:58%;}
     transition:all 2s ease; 
 }
 
-.banner .inner img{
-    margin: 0 auto;
-    display: block;
+/* center the images */
+.inner img{ margin: 0 auto; display: block; }
 
+.banner img{
     -webkit-transform:perspective(800px) scale(.8);
     -webkit-transform-origin:50% 50%;
     -moz-transform:perspective(800px) scale(.8);
@@ -444,7 +445,7 @@ header .col_2{width:58%;}
     float: left;
     
     width: 16.6665%;
-    height: 140px;
+    height: 100%;
 }
 .iosSlider.rows .slider .slide .inner{
     max-width:100px;
@@ -466,7 +467,7 @@ header .col_2{width:58%;}
     overflow: hidden;
     
     width:100%;
-    height: 106px;
+    height: 146px;
     margin:10px auto;
 
 }
@@ -483,11 +484,22 @@ header .col_2{width:58%;}
 .iosSlider.last-row .slider .slide {
     /* required */
     float: left;
-    
-    width: 33.333%;
-    height: 106px;
+    width: 40%;
+    height: 100%;
 }
 
 
 footer ul li{text-transform:capitalize;}
 .content{width:95%;}
+
+.description{
+        color:rgba(0,0,0,.6);
+        text-shadow:0 1px white;
+        font-size:14px;
+        padding:20px 0;
+        height: 15px;
+        text-transform:capitalize;
+        text-align:center;
+        font-weight:bold;
+        font-size:12px;
+}
