--- a/css/main.css
+++ b/css/main.css
@@ -444,15 +444,17 @@ header .col_2{width:58%;}
     /* required */
     float: left;
     
-    width: 16.6665%;
+    width: 18.181818%;
+    /* 100/5.5 = 18.1818*/
     height: 100%;
 }
 .iosSlider.rows .slider .slide .inner{
     max-width:100px;
     height:100%;
     margin:0 auto;
+    
 }
-.iosSlider.rows .slider .slide .inner img {
+.rows .inner img {
     box-shadow: 0 18px 5px -12px rgba(0,0,0,.5);
     border-radius:20px;
 }
@@ -488,6 +490,11 @@ header .col_2{width:58%;}
     height: 100%;
 }
 
+.last-row img{
+    box-shadow:0 10px 5px -4px rgba(0,0,0,.3);
+}
+
+
 
 footer ul li{text-transform:capitalize;}
 .content{width:95%;}
@@ -496,7 +503,7 @@ footer ul li{text-transform:capitalize;}
         color:rgba(0,0,0,.6);
         text-shadow:0 1px white;
         font-size:14px;
-        padding:20px 0;
+        padding:15px 0;
         height: 15px;
         text-transform:capitalize;
         text-align:center;
