--- a/css/34gs-queries.css
+++ b/css/34gs-queries.css
@@ -57,14 +57,14 @@
 	.button.large{padding:12px;}
 	header .col_2{width:58%;}
 
-	header .button{padding:7px 35px!important;}
+	header .button{padding:7px 25px!important;}
 
 	.size:after{content:' and landscape';}
 	.button.large{width:320px!important;}
 
 	.iosSlider.rows .slider .slide {
-	    width: 14.2857143%;
-
+	    width: 15.3846%;
+	    /* 6.5 icons 100/6.5 = 15.3846*/
 	    /* display 7 icons 100/7= 14.2857143 */
 	    /* width:12.5%; */
 	    /* display 8 icons 100/8=12.5 */
