--- a/css/modal.css
+++ b/css/modal.css
@@ -13,8 +13,10 @@
 
 html, 
 body {
-    height: 100%;
-    overflow: hidden;
+    /*height: 100%;*/
+    min-height:100%;
+    height:auto;
+    /*overflow: hidden;*/
 }
 
 html {
