--- a/css/main.css
+++ b/css/main.css
@@ -519,24 +519,15 @@ header .col_2{width:58%;}
     /* required */
     float: left;
     
-    width: 40%;
+    width: 28.5714%;
     /* display 2.5 slide (100/2.5 = 40)*/
     height: 100%;
 }
-.iosSlider.last-row .slider .slide img{
-    margin:0 auto;
-    display: block;
-    -webkit-box-shadow: 0 18px 5px -12px rgba(0,0,0,.5);
-    -moz-box-shadow: 0 18px 5px -12px rgba(0,0,0,.5);
-    box-shadow: 0 18px 5px -12px rgba(0,0,0,.5);
-    border: 1px solid silver;
-    border-radius: 5px;
-    
-
-    width: 28.5714%;
-    /*3.5 slides*/
-    /*width:40%;*/
-    height: 100%;
+.iosSlider.last-row  img{
+    box-shadow:0 10px 5px -4px rgba(0,0,0,.3);
+    position:relative;
+    display:block; 
+    width:200px;
 }
 
 .last-row img{
