--- a/css/main.css
+++ b/css/main.css
@@ -397,9 +397,8 @@ textarea[contenteditable] {
     background-image: -o-linear-gradient(center top , #fff 0%, #ccc 75%, #fff 100%);
     background-image: linear-gradient(center top , #fff 0%, #ccc 75%, #fff 100%);   
 
-    height:100%;
     min-height:100%;
-    margin:0 auto -40px;
+    margin:0 auto ;
 }
 
 header{
